--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works.",
   "icons": [
     {
-      "src": "assets/appmainlogo.png",
+      "src": "%PUBLIC_URL%assets/appmainlogo.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "assets/appmainlogo.png",
+      "src": "%PUBLIC_URL%assets/appmainlogo.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "assets/appmainlogo.png",
+      "src": "%PUBLIC_URL%assets/appmainlogo.png",
       "type": "image/png",
       "sizes": "512x512"
     }
