--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@metamask/detect-provider": "^2.0.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@web3modal/wagmi": "^4.1.10",
     "axios": "^1.6.5",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
@@ -20,6 +22,8 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "viem": "^2.9.23",
+    "wagmi": "^2.5.20",
     "web3": "^4.3.0"
   },
   "scripts": {
