--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@metamask/detect-provider": "^2.0.0",
     "axios": "^1.6.5",
     "ethers": "^5.7.2",
+    "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
